tests/integration/snapshots/integration__commands__format__ARRAY_OVER_80_CHARS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[1234567890, 1234567890, 1234567890, 1234567890, 1234567890, 1234567890, 1234567890, 1234567890, 1234567890, 1234567890, 1234567890, 1234567890, 1234567890, 1234567890, 1234567890]
stdout ---
[
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890,
  1234567890
]

stderr ---
