tests/integration/snapshots/integration__commands__format__ARRAY_SINGLE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[1]
stdout ---
[1]

stderr ---
