tests/integration/snapshots/integration__commands__format__ARRAY_SINGLE_OBJECT.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[{"single": "object"}]
stdout ---
[
  {
    "single": "object"
  }
]

stderr ---
